force-app/main/default/objects/Job_Application__c/fields/Bi_annual_Pay__c.field-meta.xml
<CustomField>
    <fullName>Bi_annual_Pay__c</fullName>
    <label>Bi-annual Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>