force-app/main/default/objects/Job_Application__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The company where the job application is being sent.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>