force-app/main/default/objects/Job_Application__c/fields/Monthly_Take_home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Take_home_Pay__c</fullName>
    <label>Monthly Take-home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>