force-app/main/default/objects/Job_Application__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>job title or position being applied for.</description>
    <label>Position</label>
    <length>255</length>
    <type>Text</type>
</CustomField>