force-app/main/default/objects/Job_Application__c/fields/Salary_Display__c.field-meta.xml
<CustomField>
    <fullName>Salary_Display__c</fullName>
    <description>After parsing from jd</description>
    <label>Salary Display</label>
    <length>40</length>
    <type>Text</type>
</CustomField>