force-app/main/default/objects/Job_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAVED</fullName>
                <default>true</default>
                <label>SAVED</label>
            </value>
            <value>
                <fullName>APPLYING</fullName>
            </value>
            <value>
                <fullName>APPLIED</fullName>
            </value>
            <value>
                <fullName>NEGOTIATING</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
            <value>
                <fullName>CLOSED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>