force-app/main/default/objects/Job_Application__c/validationRules/noStatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>noStatusChange</fullName>
    <active>true</active>
    <errorConditionFormula>CASE( Status__c ,

&quot;Saved&quot;,1,

&quot;Applying&quot;,2,

&quot;Applied&quot;,3,

&quot;Interviewing&quot;,4,

&quot;Negotiating&quot;,5,

&quot;Accepted&quot;,6,

&quot;Closed&quot;,7,0)&lt;

CASE(PRIORVALUE( Status__c ),

&quot;Saved&quot;,1,

&quot;Applying&quot;,2,

&quot;Applied&quot;,3,

&quot;Interviewing&quot;,4,

&quot;Negotiating&quot;,5,

&quot;Accepted&quot;,6,

&quot;Closed&quot;,7,0)</errorConditionFormula>
    <errorMessage>You cannot move your status backswards</errorMessage>
</ValidationRule>