force-app/main/default/objects/Job_Application__c/listViews/Jobs_in_San_Francisco.listView-meta.xml
<ListView>
    <fullName>Jobs_in_San_Francisco</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Location__c</columns>
    <columns>CompanyName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>San Francisco</value>
    </filters>
    <label>Jobs in San Francisco</label>
</ListView>