force-app/main/default/objects/Job_Application__c/listViews/My_List.listView-meta.xml
<ListView>
    <fullName>My_List</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Follow_up_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>My List</label>
</ListView>