force-app/main/default/objects/Job_Application__c/listViews/Retrieved_Today.listView-meta.xml
<ListView>
    <fullName>Retrieved_Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Salary__c</columns>
    <columns>Location__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Retrieved Today</label>
</ListView>